force-app/main/default/objects/Sprout_Social_Data_Event__c/Sprout_Social_Data_Event__c.object-meta.xml
<CustomObject>
    <label>Sprout Social Data Event</label>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Sprout Social Data Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprout Social Data Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>