force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Customer_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>