force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Media_Provider__c.field-meta.xml
<CustomField>
    <fullName>Media_Provider__c</fullName>
    <label>Media Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>