force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Parent_GUID__c.field-meta.xml
<CustomField>
    <fullName>Parent_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Parent GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>