force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_Author_Labels__c.field-meta.xml
<CustomField>
    <fullName>Persona_Author_Labels__c</fullName>
    <label>Persona Author Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>