force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Persona_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Persona External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>