force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_External_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Persona_External_Picture_URL__c</fullName>
    <label>Persona External Picture URL</label>
    <type>Url</type>
</CustomField>