force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Persona_Profile_URL__c</fullName>
    <label>Persona Profile URL</label>
    <type>Url</type>
</CustomField>