force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_Provider__c.field-meta.xml
<CustomField>
    <fullName>Persona_Provider__c</fullName>
    <label>Persona Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>