force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Persona_Real_Name__c.field-meta.xml
<CustomField>
    <fullName>Persona_Real_Name__c</fullName>
    <label>Persona Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>