force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Content__c.field-meta.xml
<CustomField>
    <fullName>Post_Content__c</fullName>
    <label>Post Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>