force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Post External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>