force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Handle__c.field-meta.xml
<CustomField>
    <fullName>Post_Handle__c</fullName>
    <label>Post Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>