force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Name__c.field-meta.xml
<CustomField>
    <fullName>Post_Name__c</fullName>
    <label>Post Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>