force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Provider__c.field-meta.xml
<CustomField>
    <fullName>Post_Provider__c</fullName>
    <label>Post Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>