force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Post_Recipient__c</fullName>
    <label>Post Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>