force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_Tags__c.field-meta.xml
<CustomField>
    <fullName>Post_Tags__c</fullName>
    <label>Post Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>