force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Post_URL__c.field-meta.xml
<CustomField>
    <fullName>Post_URL__c</fullName>
    <label>Post URL</label>
    <type>Url</type>
</CustomField>