force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Posted_At__c.field-meta.xml
<CustomField>
    <fullName>Posted_At__c</fullName>
    <label>Posted At</label>
    <type>DateTime</type>
</CustomField>