force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Raw_Persona_Data__c.field-meta.xml
<CustomField>
    <fullName>Raw_Persona_Data__c</fullName>
    <label>Raw Persona Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>