force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Response_Context_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Response_Context_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Response Context External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>