force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Sprout_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Sprout_Message_Type__c</fullName>
    <label>Sprout Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>