force-app/main/default/objects/Sprout_Social_Data_Event__c/fields/Unsent_Parent__c.field-meta.xml
<CustomField>
    <fullName>Unsent_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsent Parent</label>
    <type>Checkbox</type>
</CustomField>